2003-08-11  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-week-view.c (e_day_view_update_query): no more query
	management here.
	(query_obj_updated_cb, query_obj_removed_cb, query_query_done_cb,
	query_eval_error_cb): removed query signals' callbacks.
	(adjust_query_sexp): removed.
	(process_component): new function to draw all components from
	the model.

	* gui/e-day-view.c: adapted to changes in ECalViewEvent structure.
	(e_day_view_update_query): no more query management here.
	(query_obj_updated_cb, query_obj_removed_cb, query_query_done_cb,
	query_eval_error_cb): removed query signals' callbacks.
	(adjust_query_sexp): removed.
	(process_component): new function to draw all components from
	the model.

2003-08-11  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-view.c (e_cal_view_destroy): disconnect from signals
	on the model.
	(e_cal_view_set_model): disconnect from signals on the old model
	and connect on the new one.
	(model_changed_cb): tell the views to redraw when the model changes.

	* gui/gnome-cal.c (dn_query_obj_updated_cb, gnome_calendar_destroy,
	client_categories_changed_cb): removed the 'client' field from the
	private structure, so don't use it anymore
	(client_cal_opened_cb): if successful, add the CalClient to the
	views' model.
	(gnome_calendar_construct): don't add the client to the task model,
	add it in client_cal_opened_cb().
	(gnome_calendar_get_cal_client): removed.
	(gnome_calendar_get_calendar_model): new function.
	(gnome_calendar_open): create the CalClient here, to be added to the
	views' model in client_cal_opened_cb().

2003-08-09  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-view.[ch] (e_cal_view_get_cal_client,
	e_cal_view_set_cal_client, e_cal_view_get_query,
	e_cal_view_set_query): removed unneeded functions.
	(e_cal_view_get_model, e_cal_view_set_model): new functions.
	(e_cal_view_destroy): free the model.
	(e_cal_view_init): removed sexp initialization.

	* gui/gnome-cal.c (gnome_calendar_set_query): set the